examples/Passing/Variables/assign_sum.c
int main() {
    int a = 5;
    a += 5;
    return a;
}
