examples/Failing/Variables/fail_add2.c
int main() {
    int a = 6;
    5 += 6;
    return a;
}
